--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=places&sensor=false"></script>
-    <!-- <script src="https://cors-anywhere.herokuapp.com/https://maps.googleapis.com/maps/api/js?client=AIzaSyAfWUMLZRRUSKDESnVlsdDJ-VMW4kU_U04&v=3.28&callback=initMap"></script> -->
+    <!-- <script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=places&sensor=false"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfWUMLZRRUSKDESnVlsdDJ-VMW4kU_U04&v&callback=initMap"></script>
 
 </body>
 
